fix: reduce card image height on mobile from 220px to 160px

--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ iframe {
     
     .card-img {
         width: var(--width-mobile);
-        height: 220px;
+        height: 160px;
     }
 
     .card-info {
